# proyecto_fainaly_LogPhotos

./: README.md
photo_app/: README.md  main.py  pyproject.toml
static/: style.css
templates/: dashboard.html  login.html  recover.html  register.html  reset.html
trabbdsbgh vhvh trevi/flask-web-app/: README.md  uploads.bak
trabbdsbgh vhvh trevi/flask-web-app/src/: app.py  config.py  requirements.txt
trabbdsbgh vhvh trevi/flask-web-app/src/routes/: __init__.py  auth.py  files.py
trabbdsbgh vhvh trevi/flask-web-app/src/templates/: base.html  dashboard.html  login.html  recover.html  register.html  reset.html
trabbdsbgh vhvh trevi/flask-web-app/src/utils/: email.py  tokens.py
trabbdsbgh vhvh trevi/templates/: dashboard.html
