[project]
name = "photo-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.3",
    "flask-pymongo>=3.0.1",
    "pymongo>=4.17.0",
    "werkzeug>=3.1.8",
]
Para poder correr el programa tenemos que instalar ngrok en la aplicacion de microsoft store.
Despues vamos a ejecutarlo como administrador ngrok una vez ya instalado
tenemos que tener una cuenta creada en ngrok
despues 
